--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   "dependencies": {
     "americano": "0.3.11",
     "americano-cozy": "0.2.10",
-    "printit": "0.1.3",
+    "cozydb": "runvnc/cozy-db", 
     "async": "^0.9.0",
-    "jade": "1.6.0",
-    "node-polyglot": "0.4.1",
-    "moment": "2.8.2",
     "bluebird": "2.3.2",
-    "imap": "0.8.13",
-    "uuid": "^1.4.2",
-    "mailparser": "0.4.6",
-    "iconv": "2.1.4",
-    "lodash": "2.4.1",
-    "request-json": "0.4.12",
     "fast-json-patch": "0.4.0",
-    "nodemailer": "1.3.0",
-    "socket.io": "1.1.0",
-    "xmldom": "0.1.19",
-    "sanitizer": "0.1.2",
     "html-to-text": "0.1.0",
+    "iconv": "2.1.4",
+    "imap": "0.8.13",
+    "jade": "1.6.0",
+    "lodash": "2.4.1",
+    "mailparser": "0.4.6",
+    "moment": "2.8.2",
     "multiparty": "4.0.0",
-    "sanitize-html": "^1.4.3",
-    "americano-cozy-pouchdb": "0.3.18",
+    "node-polyglot": "0.4.1",
+    "nodemailer": "1.3.0",
     "path": "^0.4.9",
-    "path-extra": "^0.3.0"
+    "path-extra": "^0.3.0",
+    "printit": "0.1.3",
+    "request-json": "0.4.12",
+    "sanitize-html": "^1.4.3",
+    "sanitizer": "0.1.2",
+    "socket.io": "1.1.0",
+    "uuid": "^1.4.2",
+    "xmldom": "0.1.19"
   },
   "devDependencies": {
     "should": "4.0.4",
